added some dummy data in api
